--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "course_work_db"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 requests = "^2.31.0"
+psycopg2 = "^2.9.6"
 
 
 [build-system]
